@@ -1,20 +1,11 @@
 # acp 
-###### v5.0.1
+###### v5.1.0
 Application Construction Platform 应用构建平台。该项目是本人在日常工作中不断总结经验并结合最新的技术而封装的脚手架。本人会密切关注业界最新动态，并持续更新优化。使用该脚手架可快速搭建普通java应用、SpringBoot应用和SpringCloud应用。
 ## 相关组件版本及官方文档
-- [Spring Boot 2.0.6.RELEASE](https://projects.spring.io/spring-boot)
+- [Spring Boot 2.1.0.RELEASE](https://projects.spring.io/spring-boot)
 - [Spring Cloud Finchley.SR2](http://projects.spring.io/spring-cloud)
 ## 一、环境要求
 - jdk 11
-    - 启动时会提示如下警告
-    ```log
-    WARNING: An illegal reflective access operation has occurred
-    WARNING: Illegal reflective access by org.springframework.cglib.core.ReflectUtils$1 (file:/C:/Users/zhangbin/.gradle/caches/modules-2/files-2.1/org.springframework/spring-core/5.0.8.RELEASE/dc39c49e3246cdf73d3786ac41119140aed3fa08/spring-core-5.0.8.RELEASE.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int,java.security.ProtectionDomain)
-    WARNING: Please consider reporting this to the maintainers of org.springframework.cglib.core.ReflectUtils$1
-    WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-    WARNING: All illegal access operations will be denied in a future release
-    ```
-    暂时忽略，不影响程序正常运行，spring 官方回应待升级至 5.1.0 以后的版本，可解决此问题
     - 注：kotlin 和 scala 目前仅支持 jdk 1.8
 - gradle 4.10.2
 
